Fixing overflow issue with hero anchor button on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1410,10 +1410,11 @@ Use the before pseudo to allow the entire button container to become clickable b
   
   #hero a { 
       /* White space properties. */
+      width: 300px!important;
       padding: 0.8rem 2rem;
       letter-spacing: 0.05rem;
       /* Clamp the font size of the anchor and button elements, to dynmaically adjust the font size for smaller devices. */
-      font-size: clamp(var(--font-xxs), 4vw, var(--font-xs));
+      font-size: clamp(var(--font-xs), 4vw, var(--font-sm));
   }
 
   #author {
